--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.5)
 
 set(PROJECT_NAME set)
 project(${PROJECT_NAME})
@@ -25,6 +25,7 @@ add_subdirectory(src)
 add_subdirectory(samples)
 add_subdirectory(gtest)
 add_subdirectory(test)
+add_subdirectory(lights)
 
 # REPORT
 message( STATUS "")
